@@ -13,6 +13,8 @@ Reported by René Berber <r.berber@computer.org>.
 Reported by Jon Nelson <jnelson@jamponi.net> in
 <http://lists.gnu.org/archive/html/help-libidn/2012-01/msg00008.html>.
 
+** libidn: Add 'const' keyword to 'stringprep_ucs4_nfkc_normalize' function.
+
 ** Sync glib NFKC code and improve copyright/license statements.
 
 ** Update gnulib files and translations.
